# production-rust-testing-guide-examples

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: fibonacci_bench.rs
production-rust-testing-guide/: README.md
production-rust-testing-guide/docs/: fixes_applied.md
production-rust-testing-guide/src/: calculator.rs  greeter.rs  reverse.rs
scripts/: local_check.sh
src/: lib.rs
